NavigationDrawer: Add gps fragment

--- a/Application/src/main/res/values/strings.xml
+++ b/Application/src/main/res/values/strings.xml
@@ -26,4 +26,10 @@
     <string name="drawer_close">Close navigation drawer</string>
     <string name="action_websearch">Web search</string>
     <string name="app_not_available">Sorry, there\'s no web browser available</string>
+
+    <string name="req_time">Time:</string>
+    <string name="req_dis">Distance:</string>
+    <string name="start">Start GPS</string>
+    <string name="stop">Stop GPS</string>
+
 </resources>
