NavigationDrawer: Add animation fragment (1)

--- a/Application/src/main/res/values/strings.xml
+++ b/Application/src/main/res/values/strings.xml
@@ -18,6 +18,7 @@
 
     <string-array name="planets_array">
         <item>GpsTest</item>
+        <item>Animation</item>
         <item>Earth</item>
         <item>Saturn</item>
     </string-array>
