--- a/Application/src/main/res/values/strings.xml
+++ b/Application/src/main/res/values/strings.xml
@@ -19,6 +19,7 @@
     <string-array name="planets_array">
         <item>GpsTest</item>
         <item>Animation</item>
+        <item>AnimationHL</item>
         <item>Earth</item>
         <item>Saturn</item>
     </string-array>
