NavigationDrawer: Add animation fragment (3)

--- a/Application/src/main/res/values/strings.xml
+++ b/Application/src/main/res/values/strings.xml
@@ -20,6 +20,7 @@
         <item>GpsTest</item>
         <item>Animation</item>
         <item>AnimationHL</item>
+        <item>AnimationPro</item>
         <item>Earth</item>
         <item>Saturn</item>
     </string-array>
