NavigationDrawer: Add animation fragment (4)

--- a/Application/src/main/res/values/strings.xml
+++ b/Application/src/main/res/values/strings.xml
@@ -21,6 +21,7 @@
         <item>Animation</item>
         <item>AnimationHL</item>
         <item>AnimationPro</item>
+        <item>AnimationRot</item>
         <item>Earth</item>
         <item>Saturn</item>
     </string-array>
